# django-action-framework

./: .env.template  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  settings.py  setup.cfg  temple.yaml  tox.ini
.circleci/: config.yml
daf/: __init__.py  actions.py  admin.py  apps.py  contrib.py  interfaces.py  models.py  permissions.py  registry.py  rest_framework.py  urls.py  utils.py  views.py
daf/migrations/: 0001_initial.py
daf/templates/daf/admin/: _action_breadcrumbs.html  _action_buttons.html  _form_repo.js  action.html  change_form.html  change_list.html
daf/tests/: admin.py  models.py  test_actions.py  test_integration.py  test_permissions.py  test_registry.py  test_rest_framework.py  test_views.py  urls.py  viewsets.py
daf/tests/actions/: __init__.py  atomic.py  basic.py  bulk_grant_staff_access.py  grant_staff_access.py  update_my_field.py  update_my_model.py
daf/tests/migrations/: 0001_initial.py  0002_mymodel_my_extra_field.py
daf/tests/templates/tests/: action.html
docs/: Makefile  conf.py  index.rst  installation.rst  package.rst  requirements.txt  tutorial.rst
